--- a/clientSite/assets/css/custom.css
+++ b/clientSite/assets/css/custom.css
@@ -1,7 +1,6 @@
 .top-nav {
     background-color: darkslategray;
     color: white;
-
 }
 
 .intro {
@@ -68,6 +67,10 @@
 
 .menu-item > .button {
     color: white;
+}
+
+#bag {
+    max-width: 38px;
 }
 
 
